format style_words.css

--- a/styles/style_words.css
+++ b/styles/style_words.css
@@ -1,8 +1,9 @@
-h1{
-    margin: 35px; font-size: 400%;
+h1 {
+  margin: 35px;
+  font-size: 400%;
 }
 
-.video{
-    width: 60%;
-    height: 500px;
+.video {
+  width: 60%;
+  height: 500px;
 }
